# parallel-updater

./: .gitignore  Cargo.toml  LICENSE  README.md  example.updates.toml
cli/: Cargo.toml
cli/src/: error.rs  main.rs
config/: Cargo.toml
config/src/: config.rs  lib.rs  primatives.rs  types.rs  util.rs
lib/: Cargo.toml
lib/src/: config.rs  error.rs  lib.rs  types.rs  updater.rs
lib/src/update/: default.rs  mod.rs  paru.rs
src/: lib.rs  types.rs  updater.rs
src/update/: default.rs  mod.rs
