[package]
name = "parallel-update-config"
version = "0.1.0"
edition = "2021"
authors = ["Douile"]
license = "MIT"
rust-version = "1.74.1"

[features]
serde = ["dep:serde"]
clap = ["dep:clap"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
clap = { version = "4.4.11", features = ["derive"], optional = true, no-default-features = true }