[package]
name = "parallel-update"
version = "0.1.0"
edition = "2021"
authors = ["Douile"]
license = "MIT"
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
